--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ html {
   background-size: cover;
   background-repeat: no-repeat; 
   background-attachment: fixed;
+  background-image: url("../assets/img/background3.jpg");
 }
 
 .mainIndexRegistro{
